<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@drawable/bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_logo_title_vertical_white"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="122dp" />

        <TextView
            style="@style/AppTheme.CaptionRegular"
            android:textColor="@color/white"
            android:text="@string/welcome"
            android:layout_marginTop="66dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Login -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInputLayout.OnColored"
            app:hintEnabled="false"
            android:id="@+id/wrapper_login"
            android:layout_marginTop="@dimen/padding_double_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTheme.Editable.OnColored"
                android:id="@+id/editable_login"
                android:hint="@string/login"
                android:inputType="text"
                android:nextFocusDown="@id/editable_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke_width_separator" />

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInputLayout.OnColored"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            android:id="@+id/wrapper_password"
            android:layout_marginTop="@dimen/padding_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTheme.Editable.OnColored"
                android:id="@+id/editable_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:nextFocusDown="@id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke_width_separator" />

        <com.google.android.material.button.MaterialButton
            style="@style/AppTheme.Button.OnColored"
            android:id="@+id/button_sign_in"
            android:text="@string/sign_in"
            android:layout_marginTop="54dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>