<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/cr_popup_card"
    app:cardElevation="@dimen/elevation_card"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/padding_big"
    android:layout_marginEnd="@dimen/padding_big"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/padding_medium"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            app:tint="@color/black"
            android:id="@+id/image_close"
            android:src="@drawable/ic_round_close_24"
            android:layout_gravity="end"
            android:layout_width="@dimen/size_icon"
            android:layout_height="@dimen/size_icon" />

        <TextView
            style="@style/AppTheme.CaptionSmall"
            android:text="@string/text_order"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_order"
            android:background="@drawable/shape_toggle_button_default"
            android:minHeight="112dp"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginHorizontal="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AppTheme.CaptionSmall"
            android:text="@string/your_order_classified"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginHorizontal="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Card Type -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginHorizontal="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_type_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/AppTheme.Label"
                android:id="@+id/text_type_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Order Type -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_tiny"
            android:layout_marginHorizontal="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_type_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/AppTheme.Label"
                android:id="@+id/text_type_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageButton
            app:tint="@color/gray_dark"
            android:id="@+id/button_continue"
            android:src="@drawable/ic_round_arrow_right_alt_24"
            android:scaleType="fitXY"
            android:background="@color/white"
            android:padding="6dp"
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>