<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:openDrawer="start"
    android:id="@+id/drawer"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/activity_main_content_container"
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:backgroundTint="@color/white"
        android:fitsSystemWindows="true"
        android:paddingTop="@dimen/padding_large"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginBottom="@dimen/padding_double_big"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/layout_main_menu_header"
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:paddingStart="@dimen/padding_big"
                android:paddingEnd="@dimen/padding_big"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    tools:ignore="ContentDescription"
                    android:id="@+id/button_menu_close"
                    android:src="@drawable/ic_round_close_24"
                    android:tint="@color/gray_dark"
                    android:background="@null"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </FrameLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_below="@id/layout_main_menu_header"
                android:layout_above="@id/menu_item_sign_out"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/padding_medium"
                    android:layout_marginEnd="@dimen/padding_big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.frozenlab.hack.custom.view.NavigationMenuItemView
                        app:hint="@string/hint_profile"
                        app:iconSize="@dimen/size_icon_medium"
                        android:id="@+id/menu_item_profile"
                        android:layout_marginBottom="@dimen/padding_big"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.frozenlab.hack.custom.view.NavigationMenuItemView
                        app:title="@string/about_application"
                        app:iconSize="@dimen/size_icon_medium"
                        android:id="@+id/menu_item_about_app"
                        android:layout_marginBottom="@dimen/padding_big"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <com.frozenlab.hack.custom.view.NavigationMenuItemView
                app:title="@string/sign_out"
                app:iconSize="@dimen/size_icon_medium"
                android:id="@+id/menu_item_sign_out"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/padding_medium"
                android:layout_marginEnd="@dimen/padding_big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>